--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Employee Payroll Tracker</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./assests/css/style.css" />
 </head>
 
 <body>
@@ -22,8 +22,8 @@
        <table>
         <thead>
           <tr>
-            <th>Matt</th>
-            <th>Vogelsang</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Salary</th>
           </tr>
         </thead>
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="./assests/js/script.js"></script>
 </body>
 
 </html>
